kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpctest
spec:
  selector:
    app: grpctest
  ports:
  - port: 9999
    targetPort: 9999
