kustomize/ingressrouter.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grcptest-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grpctest.default.svc`)
      services:
        - name: grpctest
          namespace:  default
          port: 9999
          scheme: h2c
          passHostHeader: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: grcptest-ingressroute-tcp
spec:
  entryPoints:
    - scanner
  routes:
    - kind: Rule
      match: HostSNI(`*`)
      services:
        - name: grpctest
          namespace:  default
          port: 9999
